--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,2 @@
 <app-barra-navegacion></app-barra-navegacion>
-<br>
-<app-carrusel></app-carrusel>
-<br>
-<div class="container marketing">
-
-  <app-perfiles></app-perfiles>
-
-  <app-separador></app-separador>
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">¿Pantallas transparentes en las que hacer compras? <span class="text-body-secondary">Así será la televisión del futuro </span></h2>
-      <p class="lead">Televisores sin cables que se pegan a la pared, que se enrollan para guardarse y pasar inadvertidos o que giran para ponerse en vertical. Son algunos de los aparatos que han protagonizado el CES, la mayor feria de electrónica de consumo del mundo, en los últimos años. En esta edición, que se celebra esta semana en Las Vegas (EE UU), gigantes tecnológicos como Panasonic, Samsung o LG han presentado sus televisores más potentes e innovadores, con los que aspiran a revolucionar el hogar inteligente.</p>
-    </div>
-    <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="assets/pantallas.jpeg" alt="">
-    </div>
-  </div>
-
-  <app-separador></app-separador>
-
-  <div class="row featurette">
-    <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-    </div>
-    <div class="col-md-5 order-md-1">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-    </div>
-  </div>
-
-  <app-separador></app-separador>
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-      <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-    </div>
-    <div class="col-md-5">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-    </div>
-  </div>
-
-  <app-separador></app-separador>
-
-</div>
+<router-outlet></router-outlet>
