--- a/src/app/componentes/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/componentes/barra-navegacion/barra-navegacion.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" aria-current="page" routerLink="">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Carreras</a>
+          <a class="nav-link" routerLink="/carreras"  >Carreras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Directorio</a>
+          <a class="nav-link" routerLink="/directorio">Directorio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Inscripciones</a>
